--- a/docs/examples/LLS_lowz.ipynb
+++ b/docs/examples/LLS_lowz.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -60,14 +60,14 @@
      "data": {
       "text/html": [
        "&lt;Table length=5&gt;\n",
-       "<table id=\"table4552512400\">\n",
-       "<thead><tr><th>Target</th><th>z_em</th><th>RA</th><th>DEC</th><th>z_abs</th><th>logNHI</th><th>elogNHI</th><th>logNMgII</th><th>ep_logNMgII</th><th>em_logNMgII</th><th>[X/H]</th><th>ep_[X/H]</th><th>em_[X/H]</th><th>68%[X/H]_low</th><th>68%[X/H]_high</th><th>95%[X/H]_low</th><th>95%[X/H]_high</th></tr></thead>\n",
-       "<thead><tr><th>str11</th><th>float64</th><th>str12</th><th>str11</th><th>float64</th><th>float64</th><th>float64</th><th>str5</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>str7</th><th>str7</th><th>str7</th><th>str7</th></tr></thead>\n",
-       "<tr><td>J0800+4212</td><td>0.99407</td><td>+08:00:03.90</td><td>+42:12:53.2</td><td>0.598</td><td>16.95</td><td>0.2</td><td>11.75</td><td>0.17</td><td>0.3</td><td>-1.99</td><td>0.3</td><td>0.3</td><td>-2.13</td><td>-1.85</td><td>-2.24</td><td>-1.62</td></tr>\n",
-       "<tr><td>J0804+2743</td><td>1.21924</td><td>+08:04:24.97</td><td>+27:43:23.2</td><td>0.9106</td><td>17.45</td><td>0.1</td><td>12.27</td><td>0.06</td><td>0.08</td><td>-1.96</td><td>0.13</td><td>0.13</td><td>-2.12</td><td>-1.79</td><td>-2.24</td><td>-1.52</td></tr>\n",
-       "<tr><td>J0806+1442</td><td>1.21268</td><td>+08:06:30.30</td><td>+14:42:42.4</td><td>1.0943</td><td>17.4</td><td>0.2</td><td>13.51</td><td>1.0</td><td>1.0</td><td>-0.64</td><td>1.0</td><td>1.0</td><td>&gt;-0.80</td><td>\\nodata</td><td>&gt;-0.92</td><td>\\nodata</td></tr>\n",
-       "<tr><td>J0806+1442</td><td>1.21268</td><td>+08:06:30.30</td><td>+14:42:42.4</td><td>0.9238</td><td>17.2</td><td>0.2</td><td>12.57</td><td>0.09</td><td>0.09</td><td>-1.4</td><td>0.22</td><td>0.22</td><td>-1.55</td><td>-1.26</td><td>-1.66</td><td>-1.01</td></tr>\n",
-       "<tr><td>J0810+5025</td><td>1.20573</td><td>+08:10:02.69</td><td>+50:25:38.7</td><td>0.65</td><td>16.82</td><td>0.15</td><td>11.75</td><td>-1.0</td><td>-1.0</td><td>-1.81</td><td>-1.0</td><td>-1.0</td><td>\\nodata</td><td>&lt;-1.67</td><td>\\nodata</td><td>&lt;-1.43</td></tr>\n",
+       "<table id=\"table4774536976\">\n",
+       "<thead><tr><th>Target</th><th>z_em</th><th>RA</th><th>DEC</th><th>z_abs</th><th>logNHI</th><th>elogNHI</th><th>vmin</th><th>vmax</th><th>logNMgII</th><th>ep_logNMgII</th><th>em_logNMgII</th><th>[X/H]</th><th>ep_[X/H]</th><th>em_[X/H]</th><th>68%[X/H]_low</th><th>68%[X/H]_high</th><th>95%[X/H]_low</th><th>95%[X/H]_high</th></tr></thead>\n",
+       "<thead><tr><th>str11</th><th>float64</th><th>str12</th><th>str11</th><th>float64</th><th>float64</th><th>float64</th><th>int64</th><th>int64</th><th>str5</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>str7</th><th>str7</th><th>str7</th><th>str7</th></tr></thead>\n",
+       "<tr><td>J0800+4212</td><td>0.99407</td><td>+08:00:03.90</td><td>+42:12:53.2</td><td>0.598</td><td>16.95</td><td>0.2</td><td>-100</td><td>100</td><td>11.75</td><td>0.17</td><td>0.3</td><td>-1.99</td><td>0.3</td><td>0.3</td><td>-2.13</td><td>-1.85</td><td>-2.24</td><td>-1.62</td></tr>\n",
+       "<tr><td>J0804+2743</td><td>1.21924</td><td>+08:04:24.97</td><td>+27:43:23.2</td><td>0.9106</td><td>17.45</td><td>0.1</td><td>-103</td><td>79</td><td>12.27</td><td>0.06</td><td>0.08</td><td>-1.96</td><td>0.13</td><td>0.13</td><td>-2.12</td><td>-1.79</td><td>-2.24</td><td>-1.52</td></tr>\n",
+       "<tr><td>J0806+1442</td><td>1.21268</td><td>+08:06:30.30</td><td>+14:42:42.4</td><td>1.0943</td><td>17.4</td><td>0.2</td><td>-26</td><td>16</td><td>13.51</td><td>1.0</td><td>1.0</td><td>-0.64</td><td>1.0</td><td>1.0</td><td>&gt;-0.80</td><td>\\nodata</td><td>&gt;-0.92</td><td>\\nodata</td></tr>\n",
+       "<tr><td>J0806+1442</td><td>1.21268</td><td>+08:06:30.30</td><td>+14:42:42.4</td><td>0.9238</td><td>17.2</td><td>0.2</td><td>-14</td><td>9</td><td>12.57</td><td>0.09</td><td>0.09</td><td>-1.4</td><td>0.22</td><td>0.22</td><td>-1.55</td><td>-1.26</td><td>-1.66</td><td>-1.01</td></tr>\n",
+       "<tr><td>J0810+5025</td><td>1.20573</td><td>+08:10:02.69</td><td>+50:25:38.7</td><td>0.65</td><td>16.82</td><td>0.15</td><td>-100</td><td>100</td><td>11.75</td><td>-1.0</td><td>-1.0</td><td>-1.81</td><td>-1.0</td><td>-1.0</td><td>\\nodata</td><td>&lt;-1.67</td><td>\\nodata</td><td>&lt;-1.43</td></tr>\n",
        "</table>"
       ],
       "text/plain": [
@@ -82,7 +82,7 @@
        "J0810+5025 1.20573 +08:10:02.69 ...        <-1.67      \\nodata        <-1.43"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -102,14 +102,14 @@
      "data": {
       "text/html": [
        "&lt;Table length=5&gt;\n",
-       "<table id=\"table4552512080\">\n",
-       "<thead><tr><th>Target</th><th>z_em</th><th>RA</th><th>DEC</th><th>z_abs</th><th>logNHI</th><th>elogNHI</th><th>logNMgII</th><th>ep_logNMgII</th><th>em_logNMgII</th><th>[X/H]</th><th>ep_[X/H]</th><th>em_[X/H]</th><th>68%[X/H]_low</th><th>68%[X/H]_high</th><th>95%[X/H]_low</th><th>95%[X/H]_high</th></tr></thead>\n",
-       "<thead><tr><th>str11</th><th>float64</th><th>str12</th><th>str11</th><th>float64</th><th>float64</th><th>float64</th><th>str5</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>str7</th><th>str7</th><th>str7</th><th>str7</th></tr></thead>\n",
-       "<tr><td>PKS0552-640</td><td>999.0</td><td>999</td><td>999</td><td>0.3451</td><td>16.9</td><td>0.08</td><td>12.22</td><td>-1.0</td><td>-1.0</td><td>-1.6</td><td>-1.0</td><td>-1.0</td><td>999</td><td>999</td><td>999</td><td>999</td></tr>\n",
-       "<tr><td>PG1630+377</td><td>999.0</td><td>999</td><td>999</td><td>0.274</td><td>16.98</td><td>0.05</td><td>12.19</td><td>0.02</td><td>0.02</td><td>-1.71</td><td>0.06</td><td>0.06</td><td>999</td><td>999</td><td>999</td><td>999</td></tr>\n",
-       "<tr><td>PKS1302-102</td><td>999.0</td><td>999</td><td>999</td><td>0.0985</td><td>17.0</td><td>0.2</td><td>UV</td><td>9999.0</td><td>9999.0</td><td>-1.6</td><td>-1.0</td><td>-1.0</td><td>999</td><td>999</td><td>999</td><td>999</td></tr>\n",
-       "<tr><td>PG1206+459</td><td>999.0</td><td>999</td><td>999</td><td>0.927</td><td>17.0</td><td>0.1</td><td>13.80</td><td>0.05</td><td>0.05</td><td>0.3</td><td>999.0</td><td>999.0</td><td>999</td><td>999</td><td>999</td><td>999</td></tr>\n",
-       "<tr><td>PG1634+706</td><td>999.0</td><td>999</td><td>999</td><td>1.04</td><td>17.3</td><td>0.3</td><td>12.42</td><td>0.03</td><td>0.03</td><td>-1.4</td><td>0.2</td><td>0.2</td><td>999</td><td>999</td><td>999</td><td>999</td></tr>\n",
+       "<table id=\"table4774536912\">\n",
+       "<thead><tr><th>Target</th><th>z_em</th><th>RA</th><th>DEC</th><th>z_abs</th><th>logNHI</th><th>elogNHI</th><th>vmin</th><th>vmax</th><th>logNMgII</th><th>ep_logNMgII</th><th>em_logNMgII</th><th>[X/H]</th><th>ep_[X/H]</th><th>em_[X/H]</th><th>68%[X/H]_low</th><th>68%[X/H]_high</th><th>95%[X/H]_low</th><th>95%[X/H]_high</th></tr></thead>\n",
+       "<thead><tr><th>str11</th><th>float64</th><th>str12</th><th>str11</th><th>float64</th><th>float64</th><th>float64</th><th>int64</th><th>int64</th><th>str5</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>str7</th><th>str7</th><th>str7</th><th>str7</th></tr></thead>\n",
+       "<tr><td>PKS0552-640</td><td>999.0</td><td>999</td><td>999</td><td>0.3451</td><td>16.9</td><td>0.08</td><td>999</td><td>999</td><td>12.22</td><td>-1.0</td><td>-1.0</td><td>-1.6</td><td>-1.0</td><td>-1.0</td><td>999</td><td>999</td><td>999</td><td>999</td></tr>\n",
+       "<tr><td>PG1630+377</td><td>999.0</td><td>999</td><td>999</td><td>0.274</td><td>16.98</td><td>0.05</td><td>999</td><td>999</td><td>12.19</td><td>0.02</td><td>0.02</td><td>-1.71</td><td>0.06</td><td>0.06</td><td>999</td><td>999</td><td>999</td><td>999</td></tr>\n",
+       "<tr><td>PKS1302-102</td><td>999.0</td><td>999</td><td>999</td><td>0.0985</td><td>17.0</td><td>0.2</td><td>999</td><td>999</td><td>UV</td><td>9999.0</td><td>9999.0</td><td>-1.6</td><td>-1.0</td><td>-1.0</td><td>999</td><td>999</td><td>999</td><td>999</td></tr>\n",
+       "<tr><td>PG1206+459</td><td>999.0</td><td>999</td><td>999</td><td>0.927</td><td>17.0</td><td>0.1</td><td>999</td><td>999</td><td>13.80</td><td>0.05</td><td>0.05</td><td>0.3</td><td>999.0</td><td>999.0</td><td>999</td><td>999</td><td>999</td><td>999</td></tr>\n",
+       "<tr><td>PG1634+706</td><td>999.0</td><td>999</td><td>999</td><td>1.04</td><td>17.3</td><td>0.3</td><td>999</td><td>999</td><td>12.42</td><td>0.03</td><td>0.03</td><td>-1.4</td><td>0.2</td><td>0.2</td><td>999</td><td>999</td><td>999</td><td>999</td></tr>\n",
        "</table>"
       ],
       "text/plain": [
@@ -124,7 +124,7 @@
        " PG1634+706   999.0   999   999 ...           999          999           999"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +311,7 @@
     "            else:\n",
     "                flg = 1\n",
     "            # Build a component\n",
-    "            absc = AbsComponent(lls.coord, (12,2), lls.zabs, [-300,300]*u.km/u.s, \n",
+    "            absc = AbsComponent(lls.coord, (12,2), lls.zabs, [w16_mtl['vmin'][iw16],w16_mtl['logNMgII'][iw16]]*u.km/u.s, \n",
     "                               Ntup=(flg, float(w16_mtl['logNMgII'][iw16]), \n",
     "                                    np.mean([w16_mtl['em_logNMgII'][iw16],w16_mtl['ep_logNMgII'][iw16]])))\n",
     "            # Add\n",
