--- a/docs/examples/COS_Dwarfs_updates.ipynb
+++ b/docs/examples/COS_Dwarfs_updates.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# COS-Dwarfs Updates (v1.0)\n",
+    "# COS-Dwarfs Updates (v1.1)\n",
     "\n",
     "Version History:\n",
     "\n",
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -720,11 +720,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: UnitsWarning: The unit 'Angstrom' has been deprecated in the FITS standard. Suggested: 10**-1 nm. [astropy.units.format.utils]\n",
+      "/Users/xavier/local/Python/linetools/linetools/lists/linelist.py:374: RuntimeWarning: divide by zero encountered in log10\n",
+      "  self._data['log(w*f)'] = np.log10(qm_strength)\n",
+      "/Users/xavier/anaconda/lib/python2.7/site-packages/numpy/ma/core.py:824: RuntimeWarning: invalid value encountered in less_equal\n",
+      "  return umath.less_equal(x, self.critical_value)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading abundances from Asplund2009\n",
+      "Abundances are relative by number on a logarithmic scale with H=12\n",
+      "Be patient, using /Users/xavier/Dropbox/COS-Halos-Data//cos-dwarfs_systems.v1.1.tar.gz to load COS-Halos\n",
+      "Skipping a likely folder: CGM_JSON\n"
+     ]
+    }
+   ],
    "source": [
     "cos_dwarfs_v11 = pch.COSDwarfs()\n",
     "cos_dwarfs_v11.load_sys(tfile=cos_dwarfs_v11.cdir+'/cos-dwarfs_systems.v1.1.tar.gz', chk_lowz=False)"
@@ -746,6 +768,38 @@
    "metadata": {},
    "source": [
     "## Tests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 11.49805577,  11.17881628,  11.19026726,  11.17079078,\n",
+       "        10.83881709,  11.18595909,  11.60629637,  11.57758644,\n",
+       "        11.51339801,  11.64226876,  11.73424622,  10.85954009,\n",
+       "        11.53099605,  11.19545824,  11.59781166,  11.72654345,\n",
+       "        11.00166726,  11.23393558,  10.51364051,  11.70698573,\n",
+       "        11.45278318,  11.59229037,  11.64737125,  11.82958932,\n",
+       "        11.27063378,  11.56737504,  11.59096303,  11.38424995,\n",
+       "        11.80555423,  11.4119666 ,  11.61279027,  11.46012042,\n",
+       "        11.41695003,  11.422477  ,  11.32654169,  11.49675219,\n",
+       "        11.3831578 ,  10.65930681,  11.46371208,  11.63897304,\n",
+       "        11.31221765,  11.54482217,  11.75496851])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cos_dwarfs_v11.halo_mass"
    ]
   },
   {
