--- a/docs/examples/LLS_lowz.ipynb
+++ b/docs/examples/LLS_lowz.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Low z LLS (Lehner+13, Wotta+16)  [v1.1]"
+    "# Low z LLS (Lehner+13, Wotta+16)  [v1.2]"
    ]
   },
   {
@@ -1148,6 +1148,87 @@
    ],
    "source": [
     "L13_tst.ZH"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### Simpler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from pyigm.surveys import llssurvey as llss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading systems from /Users/xavier/local/Python/pyigm/pyigm/data/LLS/Literature/lehner13.tar.gz\n",
+      "Skipping a likely folder: IGM_JSON\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/xavier/local/Python/linetools/linetools/isgm/abssystem.py:288: UserWarning: Input AbsComponent with Zion=(12, 2) does not match AbsSystem rules. Not appending\n",
+      "  warnings.warn('Input AbsComponent with Zion={} does not match AbsSystem rules. Not appending'.format(abscomp.Zion))\n",
+      "/Users/xavier/local/Python/linetools/linetools/isgm/abssystem.py:294: UserWarning: Failed velocity overlap\n",
+      "  warnings.warn('Failed velocity overlap')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading systems from /Users/xavier/local/Python/pyigm/pyigm/data/LLS/Literature/wotta16.tar.gz\n",
+      "Skipping a likely folder: IGM_JSON\n"
+     ]
+    }
+   ],
+   "source": [
+    "reload(llss)\n",
+    "lowz = llss.LLSSurvey.load_lowz()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<IGMSurvey: nsys=55, type=LLS, ref=Lehner+13,Wotta+16>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lowz"
    ]
   },
   {
