--- a/docs/datasets/CGM_P11.ipynb
+++ b/docs/datasets/CGM_P11.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -63,7 +63,7 @@
      "data": {
       "text/html": [
        "&lt;Table length=3&gt;\n",
-       "<table id=\"table4605761872\">\n",
+       "<table id=\"table4599547088\">\n",
        "<thead><tr><th>QSO</th><th>QSO_RA</th><th>QSO_DEC</th><th>QSO_ZEM</th><th>QSO_VMAG</th><th>QSO_UV</th><th>FLG_GAL</th><th>GAL_FIL</th><th>R_LIMIT</th><th>N_GAL [4]</th><th>COMPLETE [2,4]</th><th>FLG_FUSE</th><th>FUSE_EXP</th><th>FUSE_SNR</th><th>FLG_STIS</th><th>STIS_COMM [4]</th><th>FLG_GHRS</th><th>GHRS_COMM [4]</th></tr></thead>\n",
        "<thead><tr><th>str15</th><th>str15</th><th>str15</th><th>float32</th><th>float32</th><th>float32</th><th>int16</th><th>str58</th><th>float32</th><th>int32</th><th>int32</th><th>int16</th><th>float32</th><th>float32</th><th>int16</th><th>str60</th><th>int16</th><th>str60</th></tr></thead>\n",
        "<tr><td>Q0026+1259</td><td>00:29:13.8</td><td>+13:16:04</td><td>0.142</td><td>14.78</td><td>20.0</td><td>1</td><td>/u/xavier/LCO/OVI/FUSE/data/Q0026+1259/Q0026+1259_gal.fits</td><td>20.0</td><td>131 .. 47</td><td>22 .. 85</td><td>1</td><td>20000.0</td><td>7.0</td><td>0</td><td>..</td><td>1</td><td>G270M 5222s                                                  ..</td></tr>\n",
@@ -81,7 +81,7 @@
        "TONS210         ..."
       ]
      },
-     "execution_count": 23,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -141,7 +141,7 @@
      "data": {
       "text/html": [
        "&lt;Table length=3&gt;\n",
-       "<table id=\"table4554311760\">\n",
+       "<table id=\"table4599717648\">\n",
        "<thead><tr><th>FIELD</th><th>ID</th><th>OBJ_ID</th><th>FLG_ANLY</th><th>FLG_SURVEY</th><th>OBJ_TYPE</th><th>MAG [10]</th><th>MAGERR [10]</th><th>FILTER [10]</th><th>IMG_FIL [10]</th><th>XYPIX [2]</th><th>RA</th><th>DEC</th><th>AREA</th><th>STARGAL</th><th>GAL_TYPE</th><th>GAL_COEFF [10]</th><th>Z</th><th>VCIRC</th><th>FSPEC_FIL [10]</th><th>DRA</th><th>DDEC</th></tr></thead>\n",
        "<thead><tr><th>str11</th><th>int32</th><th>str1</th><th>int16</th><th>int16</th><th>int16</th><th>float32</th><th>float32</th><th>str1</th><th>str27</th><th>float32</th><th>float64</th><th>float64</th><th>float32</th><th>float32</th><th>str5</th><th>float32</th><th>float64</th><th>float32</th><th>str29</th><th>float64</th><th>float64</th></tr></thead>\n",
        "<tr><td>Q0026+1259</td><td>1303</td><td>a</td><td>7</td><td>1</td><td>0</td><td>19.733 .. 0.0</td><td>0.125 .. 9.99</td><td>B ..</td><td>Images/Q0026+1259XB.fits    ..</td><td>1014.76 .. 1034.29</td><td>7.28886499155</td><td>13.2746021629</td><td>10.43</td><td>0.18</td><td>Late</td><td>0.331349 .. 0.0</td><td>0.0329451337457</td><td>0.0</td><td>..</td><td>45.6990947951</td><td>0.0191390593786</td></tr>\n",
@@ -159,7 +159,7 @@
        "PKS0405-123 90033      a ... 97.7760719383 0.0877822129587"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -216,7 +216,7 @@
        "         1.00000000e+00], dtype=float32)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -254,7 +254,7 @@
        "         5.00000007e-02], dtype=float32)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -309,15 +309,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: UnitsWarning: The unit 'Angstrom' has been deprecated in the FITS standard. Suggested: 10**-1 nm. [astropy.units.format.utils]\n",
+      "/Users/xavier/local/Python/linetools/linetools/lists/linelist.py:374: RuntimeWarning: divide by zero encountered in log10\n",
+      "  self._data['log(w*f)'] = np.log10(qm_strength)\n",
+      "/Users/xavier/anaconda/lib/python2.7/site-packages/numpy/ma/core.py:824: RuntimeWarning: invalid value encountered in less_equal\n",
+      "  return umath.less_equal(x, self.critical_value)\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Loading abundances from Asplund2009\n",
+      "Abundances are relative by number on a logarithmic scale with H=12\n",
       "Skipping a likely folder: CGM_JSON\n"
      ]
     },
@@ -325,6 +338,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/Users/xavier/local/Python/linetools/linetools/isgm/abssystem.py:288: UserWarning: Input AbsComponent with Zion=(8, 6) does not match AbsSystem rules. Not appending\n",
+      "  warnings.warn('Input AbsComponent with Zion={} does not match AbsSystem rules. Not appending'.format(abscomp.Zion))\n",
+      "/Users/xavier/local/Python/linetools/linetools/isgm/abssystem.py:294: UserWarning: Failed velocity overlap\n",
+      "  warnings.warn('Failed velocity overlap')\n",
       "/Users/xavier/local/Python/linetools/linetools/isgm/abssystem.py:288: UserWarning: Input AbsComponent with Zion=(1, 1) does not match AbsSystem rules. Not appending\n",
       "  warnings.warn('Input AbsComponent with Zion={} does not match AbsSystem rules. Not appending'.format(abscomp.Zion))\n"
      ]
@@ -336,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -401,13 +418,51 @@
        "<IGMSystem: IGMSystem 21:58:51.8 -30:13:30, 0.0169383, NHI=0, Z/H=0>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "p11"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$[46.32007,~231.08717,~153.91919,~281.05024,~34.785816,~241.08236,~271.56657,~263.85542,~170.30404,~193.11905,~277.85574,~228.92416,~101.21597,~122.3351,~181.21741,~78.670472,~306.79467,~159.32049,~133.01256,~221.58367,~137.97841,~151.94839,~72.602911,~182.7867,~138.10197,~94.401827,~106.07147,~92.907301,~37.14687,~85.547486,~41.258645,~260.27253,~120.93128,~243.45857,~225.98147,~69.865838,~227.78876,~88.463791,~99.493909,~274.85217,~162.60742,~309.02131,~176.70156,~282.59707,~293.98086,~184.38542,~228.32783,~305.40178,~266.93147,~292.71387,~236.98361,~35.061178,~271.77462,~108.99879] \\; \\mathrm{kpc}$"
+      ],
+      "text/plain": [
+       "<Quantity [  46.32007042, 231.08717107, 153.91919088, 281.05023842,\n",
+       "             34.78581646, 241.08235808, 271.56656557, 263.85542101,\n",
+       "            170.30403727, 193.11905036, 277.85573984, 228.92416305,\n",
+       "            101.21597012, 122.33510368, 181.21741485,  78.67047199,\n",
+       "            306.79467169, 159.32049028, 133.01256117, 221.58366503,\n",
+       "            137.97841172, 151.94838708,  72.60291124, 182.78669925,\n",
+       "            138.10197377,  94.40182666, 106.07146536,  92.90730056,\n",
+       "             37.14686961,  85.54748551,  41.25864481, 260.27253479,\n",
+       "            120.93128195, 243.45856691, 225.98146589,  69.86583806,\n",
+       "            227.78876094,  88.46379097,  99.49390855, 274.8521744 ,\n",
+       "            162.60742332, 309.02130732, 176.70156002, 282.59706888,\n",
+       "            293.98085988, 184.38541882, 228.32783121, 305.40178171,\n",
+       "            266.93146969, 292.71386558, 236.98360734,  35.06117805,\n",
+       "            271.77462491, 108.99879108] kpc>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p11.rho"
    ]
   },
   {
