dNdX change and COS-Halos update

--- a/docs/examples/COS-Halos_database.ipynb
+++ b/docs/examples/COS-Halos_database.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# COS-Halos Database (v1.1.1)\n",
+    "# COS-Halos Database (v1.1.2)\n",
     "\n",
     "This Notebook is intended to record updates to the COS-Halos database.\n",
     "\n",
@@ -12,7 +12,8 @@
     "\n",
     " * v1.0   -- 09 Feb 2016 by JXP\n",
     " * v1.1   -- 13 Apr 2016 by JXP\n",
-    " * v1.1.1 -- 14 Jul 2016 by JXP  [includes 2 values for sig_NHI]"
+    " * v1.1.1 -- 14 Jul 2016 by JXP  [includes 2 values for sig_NHI]\n",
+    " * v1.1.2 -- 17 Sep 2016 by JXP  [updated NHI for several systems]"
    ]
   },
   {
@@ -307,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -316,8 +317,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Be patient, using /Users/xavier/Dropbox/COS-Halos-Data/cos-halos_systems.v1.1.tar.gz to load COS-Halos\n",
-      "Skipping a likely folder: CGM_JSON\n",
       "Be patient, using /Users/xavier/Dropbox/COS-Halos-Data//cos-halos_systems.v1.0.tar.gz to load COS-Halos\n",
       "Skipping a likely folder: CGM_JSON\n"
      ]
@@ -325,7 +324,7 @@
    ],
    "source": [
     "reload(pch)\n",
-    "cos_halos_v10 = pch.COSHalos()\n",
+    "cos_halos_v10 = pch.COSHalos(load=False)\n",
     "cos_halos_v10.load_sys(tfile=cos_halos_v10.cdir+'/cos-halos_systems.v1.0.tar.gz')"
    ]
   },
@@ -338,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -360,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -371,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -415,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -429,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -449,7 +448,7 @@
        "   'SiIII 1206': {'flag_N': 0}}}}"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -527,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -538,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
