--- a/docs/examples/COS-Halos_database.ipynb
+++ b/docs/examples/COS-Halos_database.ipynb
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -316,9 +316,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Be patient, using /Users/xavier/Dropbox/COS-Halos-Data/cos-halos_systems.v1.1.tar.gz to load COS-Halos\n",
+      "Be patient, using /Users/xavier/Dropbox/COS-Halos-Data/cos-halos_systems.v1.1.tar.gz to load\n",
       "Skipping a likely folder: CGM_JSON\n",
-      "Be patient, using /Users/xavier/Dropbox/COS-Halos-Data//cos-halos_systems.v1.0.tar.gz to load COS-Halos\n",
+      "Be patient, using /Users/xavier/Dropbox/COS-Halos-Data//cos-halos_systems.v1.0.tar.gz to load\n",
       "Skipping a likely folder: CGM_JSON\n"
      ]
     }
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -355,12 +355,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Loop on systems"
+    "### Loop on all systems -- insure sig_NHI is [low,high]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -371,30 +371,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "for key in fdict.keys():\n",
-    "    # Match\n",
-    "    mt = np.where(names == key)[0]\n",
-    "    if len(mt) != 1:\n",
-    "        raise ValueError(\"No match?!\")\n",
-    "    # Fill in \n",
-    "    if fdict[key]['flag_NHI'] == 1:\n",
-    "        cos_halos_v10.cgm_abs[mt[0]].igm_sys.NHI = fdict[key]['fit_NHI'][0]\n",
-    "        cos_halos_v10.cgm_abs[mt[0]].igm_sys.sig_NHI = [fdict[key]['fit_NHI'][0]-fdict[key]['fit_NHI'][1],\n",
-    "                                                        fdict[key]['fit_NHI'][2]-fdict[key]['fit_NHI'][0]]\n",
-    "        #pdb.set_trace()\n",
-    "        cos_halos_v10.cgm_abs[mt[0]].igm_sys.flag_NHI = 1\n",
-    "    elif fdict[key]['flag_NHI'] == 2:\n",
-    "        cos_halos_v10.cgm_abs[mt[0]].igm_sys.NHI = fdict[key]['fit_NHI'][1]\n",
-    "        cos_halos_v10.cgm_abs[mt[0]].igm_sys.flag_NHI = 2\n",
-    "    elif fdict[key]['flag_NHI'] == 3:\n",
-    "        cos_halos_v10.cgm_abs[mt[0]].igm_sys.NHI = fdict[key]['fit_NHI'][2]\n",
-    "        cos_halos_v10.cgm_abs[mt[0]].igm_sys.flag_NHI = 3"
+    "fkeys = fdict.keys()\n",
+    "for ss,cgm_abs in enumerate(cos_halos_v10.cgm_abs):\n",
+    "    if names[ss] in fkeys:\n",
+    "        # Match\n",
+    "        key = names[ss]\n",
+    "        # Fill in \n",
+    "        if fdict[key]['flag_NHI'] == 1:\n",
+    "            cos_halos_v10.cgm_abs[ss].igm_sys.NHI = fdict[key]['fit_NHI'][0]\n",
+    "            #pdb.set_trace()\n",
+    "            cos_halos_v10.cgm_abs[ss].igm_sys.flag_NHI = 1\n",
+    "        elif fdict[key]['flag_NHI'] == 2:\n",
+    "            cos_halos_v10.cgm_abs[ss].igm_sys.NHI = fdict[key]['fit_NHI'][1]\n",
+    "            cos_halos_v10.cgm_abs[ss].igm_sys.flag_NHI = 2\n",
+    "        elif fdict[key]['flag_NHI'] == 3:\n",
+    "            cos_halos_v10.cgm_abs[ss].igm_sys.NHI = fdict[key]['fit_NHI'][2]\n",
+    "            cos_halos_v10.cgm_abs[ss].igm_sys.flag_NHI = 3\n",
+    "        # Error\n",
+    "        cos_halos_v10.cgm_abs[ss].igm_sys.sig_NHI = [fdict[key]['fit_NHI'][0]-fdict[key]['fit_NHI'][1],\n",
+    "                                                            fdict[key]['fit_NHI'][2]-fdict[key]['fit_NHI'][0]]     \n",
+    "    else:\n",
+    "        if isinstance(cos_halos_v10.cgm_abs[ss].igm_sys.sig_NHI,float):\n",
+    "            cos_halos_v10.cgm_abs[ss].igm_sys.sig_NHI = [cos_halos_v10.cgm_abs[ss].igm_sys.sig_NHI]*2"
    ]
   },
   {
@@ -415,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -429,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -449,7 +453,7 @@
        "   'SiIII 1206': {'flag_N': 0}}}}"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -527,7 +531,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.030700907111167908, 0.030700907111167908]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cos_halos_v10.cgm_abs[0].igm_sys.sig_NHI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -538,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
