--- a/docs/examples/LLS_lowz.ipynb
+++ b/docs/examples/LLS_lowz.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Low z LLS (Lehner+13, Wotta+16)  [v1.2]"
+    "# Low z LLS (Lehner+13, Wotta+16)  [v1.3]"
    ]
   },
   {
@@ -60,7 +60,7 @@
      "data": {
       "text/html": [
        "&lt;Table length=5&gt;\n",
-       "<table id=\"table4529393424\">\n",
+       "<table id=\"table4631042448\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>Target</th><th>z_em</th><th>RA</th><th>DEC</th><th>z_abs</th><th>logNHI</th><th>elogNHI</th><th>vmin</th><th>vmax</th><th>logNMgII</th><th>ep_logNMgII</th><th>em_logNMgII</th><th>[X/H]</th><th>ep_[X/H]</th><th>em_[X/H]</th><th>68%[X/H]_low</th><th>68%[X/H]_high</th><th>95%[X/H]_low</th><th>95%[X/H]_high</th></tr></thead>\n",
        "<thead><tr><th>str11</th><th>float64</th><th>str12</th><th>str11</th><th>float64</th><th>float64</th><th>float64</th><th>int64</th><th>int64</th><th>str5</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>str7</th><th>str7</th><th>str7</th><th>str7</th></tr></thead>\n",
        "<tr><td>J0800+4212</td><td>0.99407</td><td>+08:00:03.90</td><td>+42:12:53.2</td><td>0.598</td><td>16.95</td><td>0.2</td><td>-100</td><td>100</td><td>11.75</td><td>0.17</td><td>0.3</td><td>-1.99</td><td>0.3</td><td>0.3</td><td>-2.13</td><td>-1.85</td><td>-2.24</td><td>-1.62</td></tr>\n",
@@ -102,7 +102,7 @@
      "data": {
       "text/html": [
        "&lt;Table length=5&gt;\n",
-       "<table id=\"table4615218576\">\n",
+       "<table id=\"table4631042512\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>Target</th><th>z_em</th><th>RA</th><th>DEC</th><th>z_abs</th><th>logNHI</th><th>elogNHI</th><th>vmin</th><th>vmax</th><th>logNMgII</th><th>ep_logNMgII</th><th>em_logNMgII</th><th>[X/H]</th><th>ep_[X/H]</th><th>em_[X/H]</th><th>68%[X/H]_low</th><th>68%[X/H]_high</th><th>95%[X/H]_low</th><th>95%[X/H]_high</th></tr></thead>\n",
        "<thead><tr><th>str11</th><th>float64</th><th>str12</th><th>str11</th><th>float64</th><th>float64</th><th>float64</th><th>int64</th><th>int64</th><th>str5</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>str7</th><th>str7</th><th>str7</th><th>str7</th></tr></thead>\n",
        "<tr><td>PKS0552-640</td><td>999.0</td><td>999</td><td>999</td><td>0.3451</td><td>16.9</td><td>0.08</td><td>999</td><td>999</td><td>12.22</td><td>-1.0</td><td>-1.0</td><td>-1.6</td><td>-1.0</td><td>-1.0</td><td>999</td><td>999</td><td>999</td><td>999</td></tr>\n",
@@ -266,10 +266,80 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17.549999"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.max(l13w16['nhiall'])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Build the systems"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "L13_lls = []\n",
+    "for ii,qso in enumerate(l13w16['sightlinenl']):\n",
+    "    # init\n",
+    "    lls = LLSSystem(radec=l13_radec[qso],zem=l13_zem[qso],\n",
+    "                    zabs=l13w16['znl'][ii],NHI=l13w16['nhinl'][ii],\n",
+    "                    sig_NHI=l13w16['enhinl'][ii], \n",
+    "                    vlim=[-500,500]*u.km/u.s)\n",
+    "    # Metallicity\n",
+    "    lls.ZH = l13w16['metnl'][ii]\n",
+    "    lls.sig_ZH = (l13w16['em_metnl'][ii], l13w16['ep_metnl'][ii])\n",
+    "    # MgII\n",
+    "    mtw = np.where((w16_mtl['Target'] == qso) & (np.abs(w16_mtl['z_abs']-lls.zabs) < 1e-2))[0]\n",
+    "    if len(mtw) != 1:\n",
+    "        pdb.set_trace()\n",
+    "    else:\n",
+    "        iw16 = mtw[0]\n",
+    "    try:\n",
+    "        eMgII = float(w16_mtl['ep_logNMgII'][iw16])\n",
+    "    except:\n",
+    "        pass\n",
+    "    else:\n",
+    "        if eMgII > 9000:\n",
+    "            pass\n",
+    "        else:\n",
+    "            if w16_mtl['ep_logNMgII'][iw16] == -1.:\n",
+    "                flg = 3\n",
+    "            elif w16_mtl['ep_logNMgII'][iw16] == 1.:\n",
+    "                flg = 2\n",
+    "            else:\n",
+    "                flg = 1\n",
+    "            # Build a component\n",
+    "            absc = AbsComponent(lls.coord, (12,2), lls.zabs, [w16_mtl['vmin'][iw16],w16_mtl['vmax'][iw16]]*u.km/u.s, \n",
+    "                               Ntup=(flg, float(w16_mtl['logNMgII'][iw16]), \n",
+    "                                    np.mean([w16_mtl['em_logNMgII'][iw16],w16_mtl['ep_logNMgII'][iw16]])))\n",
+    "            # Add\n",
+    "            lls._components.append(absc)\n",
+    "    # Append\n",
+    "    L13_lls.append(lls)"
    ]
   },
   {
@@ -363,6 +433,33 @@
    ],
    "source": [
     "L13.ZH"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 16.11000061,  16.17000008,  16.18000031,  16.20000076,\n",
+       "        16.21999931,  16.29999924,  16.34000015,  16.34000015,\n",
+       "        16.37999916,  16.39999962,  16.39999962,  16.45000076,\n",
+       "        16.45000076,  16.47999954,  16.47999954,  16.52000046,\n",
+       "        16.61000061,  16.64999962,  16.65999985,  16.71999931,\n",
+       "        16.89999962,  16.97999954,  17.        ,  17.        ,  17.29999924], dtype=float32)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "L13.NHI"
    ]
   },
   {
